@startuml Diagrama de cine

class User {
    - username: str
    - email: str
    - password: str
}

class Role {
    - name: str
    - description: str
}

class UserData {
    - name: str
    - firstname: str
    - lastname: str
    - phone: str
    - address: str
    - city: str
    - country: str
}

class Movie {
    - directors
    - year
    - start date
    - final date
    - duration
    - description
    - genre
    - classification
    - cast
    - language
}

class Ticket {
    - movie
    - price
    - date
    - hour
}

class Room {
    - name
    - number
    - seats_number 
}

class Feature {
    - date_from
    - date_to
}

Feature --- Room
Feature --- Movie
Feature --- Ticket

User -- UserData
User -- Role


@enduml
